<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".repos.detail.ReposDetailActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3sp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageview_avatar"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout"
                android:contentDescription="@string/avatar"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/image_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/baseline_grade_24"
                android:tint="@color/yellow"
                android:contentDescription="@string/star"
                app:layout_constraintBottom_toBottomOf="@+id/imageview_avatar"
                app:layout_constraintStart_toEndOf="@+id/imageview_avatar"
                app:layout_constraintTop_toTopOf="@+id/imageview_avatar" />


            <TextView
                android:id="@+id/textview_stars"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/stargazers"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/text_grey"
                app:layout_constraintBottom_toBottomOf="@+id/image_star"
                app:layout_constraintStart_toEndOf="@+id/image_star"
                app:layout_constraintTop_toTopOf="@+id/image_star" />

            <TextView
                android:id="@+id/textview_stars_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/textview_stars"
                app:layout_constraintStart_toEndOf="@+id/textview_stars"
                tools:text="14322" />

            <ImageView
                android:id="@+id/image_fork"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/repo_forked_24"
                android:contentDescription="@string/fork"
                app:layout_constraintStart_toStartOf="@id/image_star"
                app:layout_constraintTop_toBottomOf="@id/image_star" />

            <TextView
                android:id="@+id/textview_forks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/forks"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/text_grey"
                app:layout_constraintBottom_toBottomOf="@+id/image_fork"
                app:layout_constraintStart_toEndOf="@+id/image_fork"
                app:layout_constraintTop_toTopOf="@+id/image_fork" />

            <TextView
                android:id="@+id/textview_forks_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/textview_forks"
                app:layout_constraintEnd_toEndOf="@id/textview_stars_count"
                tools:text="1000" />


            <TextView
                android:id="@+id/textview_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="top"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/imageview_avatar"
                tools:text="JHB, South Africa. 10 Repositories. Lots of code, lots and lots and lots of code." />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

    </WebView>

</android.support.constraint.ConstraintLayout>